--- a/views/index.html
+++ b/views/index.html
@@ -6,25 +6,29 @@
   <script src="../data/data5MileDownLongFull.js"></script>
   <script src="../data/data5MileDownFullSet.js"></script>
   <script src="../data/dataStandDriveFull2.js"></script>
+  <script src="../data/initSpin3.js"></script>
 
   <link rel="stylesheet" type="text/css" href="../stylesheets/style.css" media="screen">
   <script src="../stylesheets/jquery-1.11.3.min.js"></script>
   <script src="../controllers/lineFunctions.js"></script>
   <script src="../controllers/app.js"></script>
   <script src="../controllers/lineFunctions.js"></script>
+  <script src="../controllers/testing.js"></script>
   <script src="../controllers/dataControls.js"></script>
   <script type="text/javascript"></script>
+  <!-- <link rel="stylesheet" href="http://yui.yahooapis.com/pure/0.6.0/pure-min.css"> -->
+  <!-- <meta name="viewport" content="width=device-width, initial-scale=1"> -->
 </head>
-<body>
+<body id='bg-image2'>
 
-  <h1><a href="./data_plot.html" id="some-shit" class="center">Click To See Some Shit!</a></h1>
+  
+  <h1><a class='btn3' href="./data_plot.html" id='click-some-shit'>Click To See Some Shit</a></button></button></h1>
+  <!-- <button id='testing-function' class="btn">Testing Function</button> -->
+  
 
-<canvas id="canvas2">
-  <script>
-
-
-
-  </script>
-</canvas>
+  <canvas id="canvas-testing">
+    <script>
+    </script>
+  </canvas>
 
 </body>
