--- a/stylesheets/style.css
+++ b/stylesheets/style.css
@@ -1,20 +1,150 @@
+
+
 body{
   padding-left: 1%;
   padding-top: 1%;
   padding-right: 3%;
   padding-bottom: 1%;
 }
-#bg-image {
-  background-image: url("../images/world.png");
+
+.bgpic {
+  background-image: url("../images/garage.jpg");
   background-width: 100%;
   background-height: 100%;
   background-repeat: no-repeat;
-  background-size: contain;
-  background-position: 0px 233px;
+  /*background-size: 100%;*/
+  /*position: absolute;*/
+  /*background-position: center;*/
+  background-position: 0px 0px;
+  /*background-image: url("../images/ferrariGarage.jpg");
+  background-width: 100%;
+  background-height: 100%;
+  background-size: auto;*/
+  /*height: auto;*/
+  /*width: auto;*/
+}
+
+#bg-image3 {
+  /*opacity: .6;*/
+  background-image: url("../images/garage.jpg");
+  background-width: 100%;
+  background-height: 100%;
+  background-repeat: no-repeat;
+  background-size: 100%;
+  /*position: absolute;*/
+  background-position: center;
+}
+
+#bg-image2 {
+  /*opacity: .6;*/
+  background-image: url("../images/garage.jpg");
+  background-width: 100%;
+  background-height: 100%;
+  background-repeat: no-repeat;
+  background-size: 100%;
+  /*position: absolute;*/
+  background-position: center;
+  /*opacity: 1;*/
+  /*z-index: -10000;*/
   /*z-index: 100;*/
+  /*background-position: center;*/
+  /*z-index: -10;*/
+}
+#bg-image {
+  /*background-image: url("../images/ferrariGarage.jpg");*/
+  background-image: url("../images/ferrariGarage.jpg");
+  background-width: 100%;
+  background-height: 100%;
+  background-repeat: no-repeat;
+  /*background-size: contain;*/
+  background-position: 0px 0px;
+  /*opacity: .7;*/
   /*background-position: center;*/
 }
 
+.btn {
+  -webkit-border-radius: 6;
+  -moz-border-radius: 6;
+  border-radius: 6px;
+  font-family: Courier New;
+  color: #ffffff;
+  font-size: 15px;
+  background: #000000;
+  padding: 5px 10px 5px 10px;
+  /*border-right: solid #666666 0px;*/
+  /*border-bottom: solid #666666 0px;*/
+  /*border-left: solid #666666 0px;*/
+  text-decoration: none;
+}
+
+.btn2 {
+  /*position: absolute;*/
+  /*top: 10%;*/
+  -webkit-border-radius: 6;
+  -moz-border-radius: 6;
+  border-radius: 6px;
+  font-family: Courier New;
+  color: #ffffff;
+  font-size: 40px;
+  background: #000000;
+  padding: 5px 30px 5px 30px;
+  /*border-right: solid #666666 0px;*/
+  /*border-bottom: solid #666666 0px;*/
+  /*border-left: solid #666666 0px;*/
+  text-decoration: none;
+}
+.btn3 {
+  /*position: absolute;*/
+  /*top: 50%;*/
+  -webkit-border-radius: 6;
+  -moz-border-radius: 6;
+  border-radius: 6px;
+  font-family: Courier New;
+  color: #ffffff;
+  font-size: 40px;
+  background: #000000;
+  padding: 50px 30px 10px 30px;
+  /*border-right: solid #666666 0px;*/
+  /*border-bottom: solid #666666 0px;*/
+  /*border-left: solid #666666 0px;*/
+  text-decoration: none;
+}
+
+.btn4 {
+  /*position: absolute;*/
+  /*top: 50%;*/
+  -webkit-border-radius: 6;
+  -moz-border-radius: 6;
+  /*top: 92.5%;*/
+  position: fixed;
+  top: 61%;
+  left: 1.6%;
+  border-radius: 6px;
+  font-family: Courier New;
+  color: #ffffff;
+  font-size: 15px;
+  background: #000000;
+  padding: 7px 5px 7px 5px;
+  text-decoration: none;
+}
+
+.btn5 {
+  /*position: absolute;*/
+  /*top: 50%;*/
+  -webkit-border-radius: 6;
+  -moz-border-radius: 6;
+  /*top: 92.5%;*/
+  position: fixed;
+  top: 65%;
+  left: 1.5%;
+  border-radius: 6px;
+  font-family: Courier New;
+  color: #ffffff;
+  font-size: 15px;
+  background: #000000;
+  padding: 7px 5px 7px 5px;
+  text-decoration: none;
+}
 .bg {
   /*background: url(../images/compas.jpg) no-repeat 50% 50%;*/
   /*display: hide;*/
@@ -56,6 +186,10 @@ video {
   width: 16.66666%;
   float: left;
 }
+.col-25{
+  width: 20%;
+  float: left;
+}
 .col-3{
   width: 25%;
   float: left;
@@ -64,6 +198,11 @@ video {
   width: 30%;
   float: left;
 }
+.col-30{
+  width: 26.6%;
+  float: left;
+}
+
 .col-4{
   width: 33.33333%;
   float: left;
@@ -137,8 +276,8 @@ h1{
 
 .home{
   position: fixed;
-  top: 95%;
-  left: 49%;
+  top: 95;
+  left: 49;
 }
 
 canvas {
@@ -161,3 +300,7 @@ button{
 .center{
   text-align: center;
 }
+
+/*.center2 {*/
+  /*position: absolute;*/
+/*}*/
