--- a/views/index.html
+++ b/views/index.html
@@ -6,14 +6,19 @@
   <script src="../data/data5MileDownLongFull.js"></script>
   <script src="../data/data5MileDownFullSet.js"></script>
   <script src="../data/dataStandDriveFull2.js"></script>
-  <script src="../data/initSpin3.js"></script>
+  <script src="../data/secFiveMileDown.js"></script>
+
+  <script src="../data2/dataFlagstaffUp.js"></script>
+  <script src="../data2/dataDownFlagstaff1.js"></script>
+  <script src="../data2/dataDownFlagstaff2.js"></script>
+  <script src="../data2/dataDownBaselineHill.js"></script>
+  <script src="../data2/dataHomeFromBroadway.js"></script>
 
   <link rel="stylesheet" type="text/css" href="../stylesheets/style.css" media="screen">
   <script src="../stylesheets/jquery-1.11.3.min.js"></script>
   <script src="../controllers/lineFunctions.js"></script>
   <script src="../controllers/app.js"></script>
   <script src="../controllers/lineFunctions.js"></script>
-  <script src="../controllers/testing.js"></script>
   <script src="../controllers/dataControls.js"></script>
   <script type="text/javascript"></script>
   <!-- <link rel="stylesheet" href="http://yui.yahooapis.com/pure/0.6.0/pure-min.css"> -->
@@ -21,14 +26,14 @@
 </head>
 <body id='bg-image2'>
 
-  
+
   <h1><a class='btn3' href="./data_plot.html" id='click-some-shit'>Click To See Some Shit</a></button></button></h1>
   <!-- <button id='testing-function' class="btn">Testing Function</button> -->
-  
+  <div><button class='btn' id='test-functions'>Test Functions</button></div>
 
-  <canvas id="canvas-testing">
-    <script>
-    </script>
-  </canvas>
+
+    <canvas id="canvas-testing">
+    </canvas>
+ </div>
 
 </body>
