--- a/views/data_plot.html
+++ b/views/data_plot.html
@@ -7,13 +7,11 @@
 	<script src="../data/data5MileDownFullSet.js"></script>
 	<script src="../data/dataStandDriveFull2.js"></script>
 	<script src="../data/secFiveMileDown.js"></script>
-
 	<script src="../data2/dataFlagstaffUp.js"></script>
 	<script src="../data2/dataDownFlagstaff1.js"></script>
 	<script src="../data2/dataDownFlagstaff2.js"></script>
 	<script src="../data2/dataDownBaselineHill.js"></script>
 	<script src="../data2/dataHomeFromBroadway.js"></script>
-
 	<link rel="stylesheet" type="text/css" href="../stylesheets/style.css" media="screen">
 	<script src="../stylesheets/jquery-1.11.3.min.js"></script>
 	<script src="../controllers/lineFunctions.js"></script>
@@ -21,104 +19,89 @@
 	<script src="../controllers/lineFunctions.js"></script>
 	<script src="../controllers/dataControls.js"></script>
 	<script type="text/javascript"></script>
-	<!-- <link rel="stylesheet" href="http://yui.yahooapis.com/pure/0.6.0/pure-min.css"> -->
-	<!-- <meta name="viewport" content="width=device-width, initial-scale=1"> -->
 </head>
 <body id='bg-image'>
-
+<datacontent>
 	<div class='hide-this'>
-		<h1><button class='btn2'>Testing Area</button></h1>
+		<h1><button class='btn2' id='testing-area'>Testing Area</button></h1>
 		<hr>
+	</div>
 
-		<script>
-// var selectedFile = document.getElementById('input').files[0];
-// $('document').ready(function() {
-// $('#show-file').on('click', function() {
-// // console.log('hi');
-// document.getElementById("random-box").innerHTML = selectedFile;
-// console.log(selectedFile);
-// });
-// });
-</script>
-</div>
-
-<div class='col-35' id='button-panel'>
-	<h4>
-		<!-- Controlls: -->
-		<div><button class='btn' >Show My Report</button></div>
-		<div><button class='btn' id='cartesian'>Cartesian Layout</button></div>
-		<div><button class='btn' id='freeze'>Freeze Data</button></div>
-		<div><button class='btn' id='reset'>Reset</button></div>
-	</h4>
-	<h4 class="hide-this"/>
-	<!-- Functions: -->
-	<div><button class='btn' id='test-functions'>Test Functions</button></div>
-	<div><button class='btn' id='movement-xyz-full'>Show All Data</button></div>
-	<div><button class='btn' id='wheel'>Steering Wheel</button></div>
-	<div><button class='btn' id='orientation'>Orientation</button></div>
-	<div><button class='btn' id='location-route-model'>Location</button></div>
-	<div><button class='btn' id='location-lat-start'>Lat Start</button></div>
-	<div><button class='btn' id='location-long-start'>Long Start</button></div>
-	<hr>
-	<form class='btn4 hide-this' action="/csv-upload" method="post">
-		<input type='file' name='csv' accept='.csv'>
-		<button class='btn4' type="submit" >Submit</button>
-	</form>
-	<b><div id="text-div6"></div></b>
-</div>
-
-<div class='col-30'>
-	<canvas id="canvas-compas">
-	</canvas>
-</div>
-
-<div class='col-25 hide-then-show'>
-	<div><button id="text-div14" class='center btn'></button></div>
-	<div><button id="text-div15" class='center btn'></button></div>
-	<div><button id="text-div16" class='center btn'></button></div>
-	<hr>
-</div>
-
-<div class='col-30'>
-	<canvas id="canvas-wheel">
-	</canvas>
-</div>
-
-
-<div class="col-12"></div>
-
-
-<div class='col-2 hide-then-show'>
-	<h3>
-		<div id="text-div1" class='btn'></div>
-		<div id="text-div17" class='btn'></div>
-		<div id="sound-in-db" class='btn'></div>
-		<div id="noise-data2" class='btn'></div>
-		<div id="altitude" class='btn'></div>
-		<div id="orientation-in-degrees" class='btn'></div>
-		<div id="speed" class='btn'></div>
+	<div class='col-30' id='button-panel'>
+		<h4>
+			<div><button class='btn' id='report-button'>Show My Report</button></div>
+			<div><button class='btn' id='nothing'>Nothing</button></div>
+			<div><button class='btn' id='cartesian-button'>Cartesian Layout</button></div>
+			<div><button class='btn' id='freeze-button'>Freeze Data</button></div>
+			<div><button class='btn' id='reset-button'>Reset</button></div>
+		</h4>
+		<h4 class="hide-this"/>
+			<div><button class='btn' id='test-functions-button'>Test Functions</button></div>
+			<div><button class='btn' id='show-all-data-button'>Show All Data</button></div>
+			<div><button class='btn' id='wheel-function-button'>Steering Wheel</button></div>
+			<div><button class='btn' id='orientation-function-button'>Orientation</button></div>
+			<div><button class='btn' id='location-route-function-button'>Location</button></div>
+		</h4>
 		<hr>
-	</h3>
+		<form class='btn4 hide-this' id='upload-button' action="/csv-upload" method="post">
+			<input type='file' name='csv' accept='.csv'>
+			<button class='btn4' type="submit" >Submit</button>
+		</form>
+		<b><div id="text-div6"></div></b>
+	</div>
 
-	<b><div id="text-div-crash" class="space"></div></b>
-	<div id="text-div-good-driver" class="space"></div>
-	<div id="text-div-hard-left" class="space"></div>
-	<div id="text-div-hard-right" class="space"></div>
+	<div class='col-30'>
+		<canvas id="canvas-compas">
+		</canvas>
+	</div>
 
-	<div id="text-div9" class="space"></div>
-	<div id="text-div21" class="space"></div>
-	<div id="text-div10" class="space"></div>
-	<div id="text-div22" class="space"></div>
-	<div id="text-div-bump" class="space"></div>
-	<div id="text-div-airborne" class="space"></div>
-	<div id="text-div13" class="space"></div>
-	<h3>
-		<div id="text-div2" class='center btn' ></div>
-		<div id="text-div3" class='center btn' ></div>
-		<div id="text-div4" class='center btn' ></div>
-		<div id="text-div5" class='center btn' ></div>
+	<div class='col-25 hide-then-show'>
+		<div id="left-right-straight" class='center btn'></div>
+		<div id="text-div15" class='center btn'></div>
+		<div id="text-div16" class='center btn'></div>
+		<hr>
+	</div>
+
+	<div class='col-30'>
+		<canvas id="canvas-wheel">
+		</canvas>
+	</div>
+
+	<div class="col-12"></div>
+
+	<div class='col-2 hide-then-show'>
 		<h3>
-			<div id="text-div20" class="space"></div>
+			<div id="text-div1" class='btn'></div>
+			<div id="text-div17" class='btn'></div>
+			<div id="sound-in-db" class='btn'></div>
+			<div id="noise-data2" class='btn'></div>
+			<div id="altitude" class='btn'></div>
+			<div id="orientation-in-degrees" class='btn'></div>
+			<div id="speed" class='btn'></div>
+			<hr>
+		</h3>
+
+		<div id='all-errors-switching'></div>
+		<b><div id="text-div-crash" class="space"></div></b>
+		<div id="text-div-good-driver" class="space"></div>
+		<div id="text-div-hard-left" class="space"></div>
+		<div id="text-div-hard-right" class="space"></div>
+
+		<div id="text-div9" class="space"></div>
+		<div id="text-div21" class="space"></div>
+		<div id="text-div10" class="space"></div>
+		<div id="text-div22" class="space"></div>
+		<div id="text-div-bump" class="space"></div>
+		<div id="text-div-airborne" class="space"></div>
+		<div id="text-div13" class="space"></div>
+		<h3>
+			<div id="text-div2" class='center btn' ></div>
+			<div id="text-div3" class='center btn' ></div>
+			<div id="text-div4" class='center btn' ></div>
+			<div id="text-div5" class='center btn' ></div>
+		<h3>
+		
+		<div id="text-div20" class="space"></div>
 		</div>
 
 		<div class='col-10'>
@@ -129,17 +112,22 @@
 		<div class='col-12'>
 		</div>
 
-
+<!-- 
 		<div class='col-12'>
 			<canvas id="canvas-location">
 			</canvas>
-		</div>
+		</div> -->
 
-
-
-
-
-
-		<div><a href="./index.html" class="home btn">Home</a></div>
-
-	</body>
+		<div><a href="./index.html" class="home btn" id='home-button'>Home</a></div>
+</datacontent>
+<reportcontent>
+	<button class='btn' id='data-page'>Take Me Back To The Testing Area</button>
+	<button class='btn'>Export Data</button>
+	<p>TESTING THE SHOWING OF THE REPORT CONTENT</p>
+	<p>ERROR MESSAGES HERE IN DOC FORM</p>
+	<p>BUTTON TO EXPORT OR SAVE DATA</p>
+	<p>THIS IS THE DRIVING REPORT</p>
+	<canvas id='canvas-report'>
+	</canvas>
+</reportcontent>
+</body>
