--- a/views/index.html
+++ b/views/index.html
@@ -24,10 +24,10 @@
   <!-- <link rel="stylesheet" href="http://yui.yahooapis.com/pure/0.6.0/pure-min.css"> -->
   <!-- <meta name="viewport" content="width=device-width, initial-scale=1"> -->
 </head>
-<body id='bg-image2'>
+<body class='bg-image2'>
 
 
-  <h1><a class='btn3' href="./data_plot.html" id='click-some-shit'>Click To See Some Shit</a></button></button></h1>
+  <h1><a class='btn3' id='click-to-enter' href="./data_plot.html" id='click-some-shit'>Click to Enter Garage</a></button></button></h1>
   <!-- <button id='testing-function' class="btn">Testing Function</button> -->
   <div><button class='btn' id='test-functions'>Test Functions</button></div>
 
