reworking several functions, currently everything works

--- a/views/data_plot.html
+++ b/views/data_plot.html
@@ -21,6 +21,10 @@
 	<script type="text/javascript"></script>
 </head>
 <body id='bg-image'>
+
+<homecontent>
+</homecontent>
+
 <datacontent>
 	<div class='hide-this'>
 		<h1><button class='btn2' id='testing-area'>Testing Area</button></h1>
@@ -71,13 +75,12 @@
 
 	<div class='col-2 hide-then-show'>
 		<h3>
-			<div id="text-div1" class='btn'></div>
-			<div id="text-div17" class='btn'></div>
-			<div id="sound-in-db" class='btn'></div>
-			<div id="noise-data2" class='btn'></div>
-			<div id="altitude" class='btn'></div>
-			<div id="orientation-in-degrees" class='btn'></div>
-			<div id="speed" class='btn'></div>
+			<div><button id="text-div1" class='btn'></button></div>
+			<div><button id="sound-in-db" class='btn'></button></div>
+			<div><button id="noise-data2" class='btn'></button></div>
+			<div><button id="altitude" class='btn'></button></div>
+			<div><button id="orientation-in-degrees" class='btn'></button></div>
+			<div><button id="speed" class='btn'></button></div>
 			<hr>
 		</h3>
 
@@ -95,10 +98,10 @@
 		<div id="text-div-airborne" class="space"></div>
 		<div id="text-div13" class="space"></div>
 		<h3>
-			<div id="text-div2" class='center btn' ></div>
-			<div id="text-div3" class='center btn' ></div>
-			<div id="text-div4" class='center btn' ></div>
-			<div id="text-div5" class='center btn' ></div>
+			<div><button id="text-div2" class='center btn' ></button></div>
+			<div><button id="text-div3" class='center btn' ></button></div>
+			<div><button id="text-div4" class='center btn' ></button></div>
+			<div><button id="text-div5" class='center btn' ></button></div>
 		<h3>
 		
 		<div id="text-div20" class="space"></div>
@@ -112,14 +115,9 @@
 		<div class='col-12'>
 		</div>
 
-<!-- 
-		<div class='col-12'>
-			<canvas id="canvas-location">
-			</canvas>
-		</div> -->
-
 		<div><a href="./index.html" class="home btn" id='home-button'>Home</a></div>
 </datacontent>
+
 <reportcontent>
 	<button class='btn' id='data-page'>Take Me Back To The Testing Area</button>
 	<button class='btn'>Export Data</button>
