--- a/views/testingView.html
+++ b/views/testingView.html
@@ -24,12 +24,12 @@
   <!-- <link rel="stylesheet" href="http://yui.yahooapis.com/pure/0.6.0/pure-min.css"> -->
   <!-- <meta name="viewport" content="width=device-width, initial-scale=1"> -->
 </head>
-<body class='bg-image2'>
+<body>
 
 
   <h1><a class='btn3' id='click-to-enter' href="./data_plot.html" >Click to Enter Garage</a></button></button></h1>
   <!-- <button id='testing-function' class="btn">Testing Function</button> -->
-  <div><button class='btn' id='test-functions'>Test Functions</button></div>
+  <div><button class='btn' id='car-model'>Car Model</button></div>
 
 
     <canvas id="canvas-testing">
