--- a/stylesheets/style.css
+++ b/stylesheets/style.css
@@ -153,14 +153,6 @@ video {
   padding-top: 5px;
 }
 
-/*.col-1-var(){
-  width: 8.33333%;
-  width: 8.3%;
-  height: var()px;
-  float: left;
-  border: 1px solid red;
-}
-*/
 .col-half{
   /*width: 5%;*/
   width: 4.9%;
@@ -223,6 +215,11 @@ border: 1px solid red;
 }
 .col-7{
   width: 58.33333%;
+  float: left;
+border: 1px solid red;
+}
+.col-7minus{
+  width: 54.5%;
   float: left;
 border: 1px solid red;
 }
@@ -314,7 +311,7 @@ canvas {
 #canvas-testing {
   height: auto%;
   width: 100%;
-   border: 1px solid black;
+   /*border: 1px solid black;*/
 }
 
 button{
