--- a/views/data_plot.html
+++ b/views/data_plot.html
@@ -194,6 +194,18 @@ document.getElementById('files').addEventListener('change', handleFileSelect, fa
 		</div>
 		<div class='col-3'></div>
 	</carmodelback>
+<div id='wheelmodeltag'></div>
+	<wheelmodel>
+		<div><button class='btn' id='reset-button3'>Reset</button></div>
+		<div class='col-3'></div>
+		<div class='col-6'>
+			<canvas id='canvas-steering-wheel2'>
+			</canvas>
+		</div>
+		<div class='col-3'></div>
+	</wheelmodel>
+</div>
+
 
 
 	<reportcontent>
